mobile/expo.log
Starting project at D:\GB-Mobile-Application--Android---iOS-\mobile
env: load .env
env: export EXPO_PUBLIC_API_URL
Starting Metro Bundler
The following packages should be updated for best compatibility with the installed expo version:
  @react-native-async-storage/async-storage@1.24.0 - expected version: 1.23.1
  react-native@0.76.3 - expected version: 0.74.5
  react-native-svg@15.15.0 - expected version: 15.2.0
  @types/react@18.3.27 - expected version: ~18.2.79
  typescript@5.9.3 - expected version: ~5.3.3
Your project may not work correctly until you install the expected versions of the packages.
› Opening exp://192.168.10.167:8081 on Pixel_7_API_34
Waiting on http://localhost:8081
Logs for your project will appear below.
Android Bundling failed 30976ms D:\GB-Mobile-Application--Android---iOS-\mobile\index.js (2020 modules)
 ERROR  SyntaxError: D:\GB-Mobile-Application--Android---iOS-\mobile\node_modules\react-native\Libraries\vendor\emitter\EventEmitter.js: Unexpected token, expected "]" (39:5)

  37 |
  38 | type Registry<TEventToArgsMap: {...}> = {
> 39 |   [K in keyof TEventToArgsMap]: Set<Registration<TEventToArgsMap[K]>>,
     |      ^
  40 | };
  41 |
  42 | /**
Android Bundling failed 2380ms D:\GB-Mobile-Application--Android---iOS-\mobile\index.js (2016 modules)
 ERROR  SyntaxError: D:\GB-Mobile-Application--Android---iOS-\mobile\node_modules\react-native\Libraries\vendor\emitter\EventEmitter.js: Unexpected token, expected "]" (39:5)

  37 |
  38 | type Registry<TEventToArgsMap: {...}> = {
> 39 |   [K in keyof TEventToArgsMap]: Set<Registration<TEventToArgsMap[K]>>,
     |      ^
  40 | };
  41 |
  42 | /**
